fix: Correct button margin to support flew wrap.

--- a/src/client/sections/Introduction/Introduction.module.scss
+++ b/src/client/sections/Introduction/Introduction.module.scss
@@ -73,7 +73,9 @@
             display: flex;
             flex-flow: row wrap;
 
-            padding-top: 1.75rem;
+            & > * {
+                margin-top: 1rem;
+            }
 
             & > *:not(:last-child) {
                 margin-right: 1rem;
